--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
           <p class="muted">Main 242 Home Base</p>
           <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px">
             <a class="panel" style="padding:10px;display:flex;justify-content:space-between" target="_blank" href="https://github.com/HadeemS/game-day-api"><span>Server - GitHub</span><span>→</span></a>
-            <a class="panel" style="padding:10px;display:flex;justify-content:space-between" target="_blank" href="https://dashboard.render.com/web/srv-d4chuhur433s73dib7o0/deploys/dep-d4ni1a1im78c73avq8pg?r=2025-12-02%4017%3A22%3A54%7E2025-12-02%4017%3A26%3A04"><span>Server - Render</span><span>→</span></a>
+            <a class="panel" style="padding:10px;display:flex;justify-content:space-between" target="_blank" href="https://game-day-api.onrender.com"><span>Server - Render</span><span>→</span></a>
             <a class="panel" style="padding:10px;display:flex;justify-content:space-between" target="_blank" href="https://github.com/HadeemS/game-day"><span>Client - GitHub</span><span>→</span></a>
             <a class="panel" style="padding:10px;display:flex;justify-content:space-between" target="_blank" href="https://hadeems.github.io/game-day"><span>Client - Live Site</span><span>→</span></a>
           </div>
@@ -283,9 +283,9 @@
         errors.push("Price must be an integer between 0 and 10000");
       }
       
-      // img: string().pattern(/^(https?:\/\/|\/)/i).required() - more flexible
-      if(!data.img || !/^(https?:\/\/|\/)/i.test(data.img.trim())){
-        errors.push("Image path must start with http://, https://, or /");
+      // img: string().pattern(/^\/images\/[a-z0-9._\-]+\.(png|jpg|jpeg|webp)$/i).required()
+      if(!data.img || !/^\/images\/[a-z0-9._\-]+\.(png|jpg|jpeg|webp)$/i.test(data.img.trim())){
+        errors.push("Image must be a path like /images/filename.png (png, jpg, jpeg, or webp)");
       }
       
       // imageUrl: string().pattern(/^(https?:\/\/[^\s]+|\/[^\s]+\.(png|jpg|jpeg|webp|gif)$)/i).required()
